[workspace]
members = [
    "openalgo_greeks",
    "openalgo_tick",
    "openalgo_symcache",
    "openalgo_security",
    "openalgo_matcher",
    "openalgo_utils",
]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
